# blue-xrstream-android-client

./: .gitmodules  README.md  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/bluecpp/bluexrstream/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: .gitignore  CMakeLists.txt  CMakePresets.json
app/src/main/cpp/app/: CMakeLists.txt
app/src/main/cpp/app/include/: Shader.h  TextureAsset.h
app/src/main/cpp/app/src/: main.cpp
app/src/main/cpp/cmake-modules/: app.cmake  bluedatachannel.cmake  blueopencv.cmake  bluexr.cmake  gameactivity.cmake
app/src/main/cpp/include/: Model.h  Renderer.h  Utility.h
app/src/main/cpp/src/: Renderer.cpp
app/src/main/java/com/bluecpp/bluexrstream/: MainActivity.kt
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/bluecpp/bluexrstream/: ExampleUnitTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
